<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">
    <data>
        <variable
            name="viewModal"
            type="com.takipsan.levinson.viewModel.SettingsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.Material3.Toolbar.Surface">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Levinson"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/SoftwareContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/SofwareVersion" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/SoftwareVersion"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@{viewModal.gradVersion}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/FirmwareVersionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SoftwareContainer">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/FirmwareVersion" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/FrimwareVersion"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@{viewModal.DeviceVersion}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SerialNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FirmwareVersionContainer">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/SerialNumber" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/SerialNumber"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/SofwareVersion" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SerialNumberContainer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/AntennaPowerLabel"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/AntennaPower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <com.google.android.material.slider.Slider
            android:id="@+id/antennaPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:contentDescription="@string/AntennaPower"
            android:stepSize="1"
            android:valueFrom="0"
            android:value="@{viewModal.antennaPower}"
            android:valueTo="33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AntennaPowerLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RegionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/antennaPower">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/BaseBand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/Region"
                android:text="@{viewModal.baseBandString}"
                app:adapter="@{viewModal.getBaseBandAdapter(context)}"
                android:inputType="none"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                tools:ignore="KeyboardInaccessibleWidget" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/BaseBandLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/RegionLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/basebandSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/BasebandSpeed"
                android:text="@{viewModal.BaseBandSpeed}"
                app:adapter="@{viewModal.getRateAdapter(context)}"
                android:inputType="none"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                tools:ignore="KeyboardInaccessibleWidget" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SessionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/QValueLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BaseBandLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/session"
                android:text="@{viewModal.sessionString}"
                app:adapter="@{viewModal.getSessionAdapter(context)}"
                android:inputType="none"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                tools:ignore="KeyboardInaccessibleWidget" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/QValueLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/SessionLayout"
            app:layout_constraintTop_toBottomOf="@id/BaseBandLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/QValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/Qvalue"
                android:text="@{viewModal.QValueString}"
                app:adapter="@{viewModal.getQvalueAdapter(context)}"
                android:inputType="none"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                tools:ignore="KeyboardInaccessibleWidget" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/FlagLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SessionLayout">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/flag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="Flag"
                android:text="@{viewModal.FlagString}"
                app:adapter="@{viewModal.getFlagAdapter(context)}"
                android:inputType="none"
                android:singleLine="true"
                android:spinnerMode="dropdown"
                tools:ignore="KeyboardInaccessibleWidget" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/FactoryResetBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/factoryreset"
            android:onClick="@{() -> viewModal.factoryReset(context)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/saveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FlagLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Save"
            android:onClick="@{() -> viewModal.saveSettings(context)}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/FactoryResetBtn"
            app:layout_constraintTop_toBottomOf="@id/FlagLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>